--- a/Tutorials/NumpyTutorial.ipynb
+++ b/Tutorials/NumpyTutorial.ipynb
@@ -308,7 +308,7 @@
    ],
    "source": [
     "#numpy full\n",
-    "d = np.full((2,2), 10) # Create a constant array\n",
+    "d = np.full((2,2), 7.) # Create a constant array\n",
     "print(d) # Prints \"[[ 7. 7.]\n",
     " # [ 7. 7.]]"
    ]
